# TaskManagerSimulator

./: CMakeLists.txt  README.md
headers/: Clock.h  Enums.h  FifoScheduler.h  Parser.h  PrioPreemp.h  SRTFScheduler.h  Scheduler.h  Simulador.h  System.h  Task.h  TaskStruct.h  UIHandler.h  UserInterface.h  constants.h  enum.h
libraries/glad/: glad.c  glad.h
source/: Clock.cpp  FifoScheduler.cpp  Parser.c  PrioPreemp.cpp  SRTFScheduler.cpp  Scheduler.cpp  Simulador.cpp  System.cpp  Task.cpp  UIHandler.cpp  main.cpp
